fix: rating table sizes and spacings

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -602,7 +602,6 @@
   overflow: hidden;
 
   margin: 0 12px;
-  padding: 8px 0;
 
   background-color: var(--app-table);
 }
@@ -620,6 +619,7 @@
   padding: 12px 25px;
   font-size: 16px;
   line-height: 1.25em;
+  white-space: nowrap;
 }
 
 .Rating__item + .Rating__item {
@@ -628,7 +628,7 @@
 
 .Rating__item-place {
   font-size: 16px;
-  width: 25px;
+  min-width: 36px;
   font-weight: 500;
   flex-shrink: 0;
 }
@@ -646,7 +646,8 @@
   font-weight: 600;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  flex-shrink: 1;
+  min-width: 0;
 }
 
 .Rating__item-content {
